# thuon

./: .gitignore  Makefile  README.md  pyproject.toml  thuon.spec
.claude/: settings.json
docs/: CAPABILITY_CATALOG.md  DEVELOPER.md  small-model-optimization.md  todo-18-06-2026.md
docs/research/: anthropic-skills-thuon-integration.md  long-document-generation.md  research-qwen35-ollama-document-engine.md  research_agent_memory_business_capabilities.md  research_world_class_deep_research.md
skills/sysadmin/: SKILL.md
skills/web-designer/: SKILL.md
tests/ci/: test_agent_loop.py  test_ai_engine.py  test_capability_imports.py  test_capability_research_assistant.py  test_confidence.py  test_contract_renegotiator.py  test_core_utils.py  test_daily_brief.py  test_data_sources.py  test_deep_researcher.py  test_diagram_generator.py  test_document_engine.py  test_flask_api.py  test_knowledge_ingestion.py  test_new_features.py  test_niche_finder.py  test_notification_bus.py  test_pipeline.py  test_reactor.py  test_receipt_analyzer.py  test_result_store.py  test_rfp_tracker.py  test_search_engine.py  test_settings_manager.py  test_skill_router.py  test_sysadmin_capabilities.py  test_template_manager.py  test_tender_scout.py  test_thuon_ergonomics.py  test_tools.py  test_transient_data_manager.py  test_vision.py
tests/integration/: test_capabilities_real.py
thuon_platform/: .gitignore  README.md  app_entry.py  main.py  new_cap.sh  new_skill.sh  prop_gen.py  requirements.txt  test_live_engine.py  thuon.py  thuon.sh
thuon_platform/capabilities/: CustomerRelationshipManager.py  CybersecurityGuardian.py  DataIntegrator.py  FinancialAccountant.py  HumanResourceManager.py  LegalComplianceOfficer.py  ProjectTaskManager.py  WorkflowAutomator.py  __init__.py  accessibility_compliance_verifier.py  ai_report_writer.py  audioLogger.py  backup_operator.py  bid_calendar_builder.py  blog_outliner.py  blog_section_writer.py  blog_seo_optimizer.py  blog_topic_researcher.py  brand_sentiment_orchestrator.py  capability_judge.py  code_writer.py  company_profile_generator.py  competitive_intelligence_operative.py  consulting_research_engine.py  contract_renegotiator.py  course_creator.py  crisis_simulation_response_architect.py  cultural_transformation_designer.py  customer_support_chatbot_builder.py  daily_brief.py  deep_researcher.py  deployment_runner.py  diagram_generator.py  document_generator.py  ethical_ai_governance_engine.py  (+54 more)
(+168 files in other folders)
