[project]
name = "thuon"
version = "0.1.0"
description = "AI-powered modular business capability platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "blinker>=1.9.0",
    "duckduckgo-search>=6.0.0",
    "feedparser>=6.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "psycopg2-binary>=2.9.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "schedule>=1.2.2",
    "tavily-python>=0.3.0",
    "weaviate-client>=4.0.0",
    "pytest>=8.0.0",
    "pytest-httpserver>=1.0.0",
    "reportlab>=4.0.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "pypdf>=4.0.0",
    "rank-bm25>=0.2.2",
    "trafilatura>=1.9.0",
    "uuid6>=2024.1.12",
]
